--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "corona-react",
   "version": "1.1.0",
-  "homepage": "http://bootstrapdash.com/demo/corona-react-free/template/demo_1/preview",
+  "homepage": "temizlik.armsteknoloji.com",
   "private": true,
   "dependencies": {
     "@fullcalendar/daygrid": "^5.10.1",
@@ -22,7 +22,6 @@
     "compass-mixins": "^0.12.10",
     "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
-    
     "namor": "^1.1.3",
     "node-sass": "^4.14.1",
     "nouislider-react": "^3.4.1",
@@ -75,7 +74,8 @@
     "slick-carousel": "^1.8.1",
     "sweetalert2-react": "^0.8.3",
     "ti-icons": "^0.1.2",
-    "typicons.font": "^2.1.2"
+    "typicons.font": "^2.1.2",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "start": "react-scripts start",
