--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@lourenci/react-kanban": "^0.13.0",
     "@mdi/font": "^4.9.95",
     "@tinymce/tinymce-react": "^3.13.0",
+    "axios": "^0.26.1",
     "bootstrap": "^4.6.1",
     "bosket": "^0.2.3",
     "brace": "^0.11.1",
